--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "nerve.email-sig",
   "version": "1.0.0",
-  "description": "An email signature template for The Nerve",
+  "description": "Dynamically generate email signatures for The Nerve",
   "main": "index.js",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "mjml": "mjml src/signature.mjml -o dist/output.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,10 +25,7 @@
     "url": "https://github.com/the-nerve/nerve.email-sig/issues"
   },
   "homepage": "https://github.com/the-nerve/nerve.email-sig#readme",
-  "dependencies": {
-    "mjml": "^4.8.1",
-    "mjml-browser": "^4.8.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "snowpack": "^3.0.13"
   }
