--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
+    "generate": "node .bin/generateSignatures.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
